overflowing&sizing fixed

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,10 @@
   font-weight: 400;
 }
 
+html{
+  overflow-x: hidden;
+}
+
 body {
   background: #000000;
   -webkit-font-smoothing: antialiased;
@@ -20,7 +24,6 @@ body:not(.loaded){
 }
 
 header {
-  position: absolute;
   left: 0;
   top: 1.302vw;
   z-index: 5;
@@ -34,6 +37,11 @@ header {
   .header_logo {
     width: 2.344vw;
     height: 2.656vw;
+    
+    img{
+      width: 100%;
+      height: auto;
+    }
   }
 
   nav {
@@ -792,6 +800,7 @@ footer{
   line-height: 100%; /* 1.042vw */
   letter-spacing: -0.042vw;
   text-transform: uppercase;
+  display: block;
 }
 
 [fillable-text] {
@@ -819,4 +828,66 @@ footer{
   max-height: 100vh;
   width: 38.125vw;
   height: 29.531vw;
+}
+
+#video-popup-container {
+  display:none;
+  position: fixed;
+  z-index: 996;
+  width: 60%;
+  left: 50%;
+  top: 20%;
+  margin-left: -30%;
+  background-color: #fff;
+}
+
+#video-popup-close {
+  cursor: pointer;
+  position: absolute;
+  right: -10px;
+  top: -10px;
+  z-index: 998;
+  width: 25px;
+  height: 25px;
+  border-radius: 25px;
+  text-align: center;
+  font-size: 12px;
+  background-color: #000;
+  line-height: 25px;
+  color: #fff;
+}
+
+#video-popup-iframe-container {
+  position: absolute;
+  z-index: 997;
+  width: 100%;
+  padding-bottom: 56.25%;
+  border: 2px solid #000;
+  border-radius: 2px;
+  background-color: #000;
+}
+
+#video-popup-iframe {
+  z-index: 999;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background-color: #000;
+}
+
+#video-popup-overlay {
+  display: none;
+  position: fixed;
+  z-index: 995;
+  top: 0;
+  background-color: #000;
+  opacity: 0.8;
+  width: 100%;
+  height: 100%;
+}
+
+#video-popup-close:hover {
+  color: #DE0023;
 }
